[package]
name = "ethabi"
version = "12.0.3"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/paritytech/ethabi"
license = "MIT/Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity"]
description = "Easy to use conversion of ethereum contract calls to bytecode."
edition = "2018"

[dependencies]
hex = { version = "2.0", package = "rustc-hex", default-features = false }
serde = { version = "1.0", default-features = false , features = ["derive", "alloc"] }
serde_json = { version = "1.0.59", default-features = false, features = ["alloc"] }
tiny-keccak = "1.4"
ethereum-types = { version = "0.9.4", default-features = false, features = ["serialize"], git = "https://github.com/vmarkushin/parity-common.git", branch = "no-std", package = "ethereum-types" }
uint = { version = "0.8.5", default-features = false, git = "https://github.com/vmarkushin/parity-common.git", branch = "no-std", package = "uint" }

[dev-dependencies]
hex-literal = "0.2.1"
paste = "0.1.6"

[badges]
travis-ci = { repository = "paritytech/ethabi", branch = "master" }
coveralls = { repository = "paritytech/ethabi", branch = "master" }

[features]
default = ['std']
std = [
    'uint/std',
    'serde/std',
    'serde_json/std',
    'ethereum-types/std',
    'hex/std',
]