[package]
name = "ethabi"
version = "13.0.0"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Nicholas Rodrigues Lordello <nlordell@gmail.com>",
]
homepage = "https://github.com/rust-ethereum/ethabi"
license = "Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity"]
description = "Easy to use conversion of ethereum contract calls to bytecode."
edition = "2018"

[dependencies]
anyhow = { version = "1", default-features=false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["alloc", "derive"], default-features = false }
serde_json = { version = "1.0", features = ["alloc"], default-features = false }
sha3 = "0.9"
ethereum-types = { git = "https://github.com/vmarkushin/parity-common.git", branch = "no-std", package = "ethereum-types", default-features = false, features = ["serialize_no_std", "codec"] }
thiserror = "1"
uint = { git = "https://github.com/vmarkushin/parity-common.git", branch = "no-std", package = "uint", default-features = false }

[dev-dependencies]
hex-literal = "0.3"
paste = "1"

[features]
default = ['std']
std = [
    'uint/std',
    'serde/std',
    'serde_json/std',
    'ethereum-types/std',
    'hex/std',
    'anyhow/std',
]
